@@ -260,6 +260,28 @@ namespace tgui
 
 
         /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the index of the item with the given id
+        ///
+        /// @param id  The id of the item that was given to it when it was added
+        ///
+        /// In case the id is not unique, the index of the first item with that id will be returned.
+        ///
+        /// @return The index of the item that matched the id, or -1 when no item matches the id
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        int getIndexById(const sf::String& id) const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        /// @brief Returns the id of the item at the given index
+        ///
+        /// @param index  The index of the item to find
+        ///
+        /// @return The id of the requested item, or an empty string when the index was too high
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
+        sf::String getIdByIndex(std::size_t index) const;
+
+
+        /////////////////////////////////////////////////////////////////////////////////////////////////////////////////////////
         /// @brief Returns the currently selected item
         ///
         /// @return The selected item
